--- a/sample_submission.ipynb
+++ b/sample_submission.ipynb
@@ -14,8 +14,10 @@
     "import xgboost as xgb\n",
     "import warnings\n",
     "\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.datasets import dump_svmlight_file\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import Imputer\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
@@ -221,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "<class 'numpy.ndarray'> <class 'pandas.core.series.Series'>\n"
      ]
     }
    ],
@@ -233,7 +235,27 @@
     "X_train = imputer.transform(X_train)\n",
     "X_test = imputer.transform(X_test)\n",
     "\n",
-    "print(type(X_train))"
+    "print(type(X_train), type(y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Converting y_test to a numpy array\n",
+    "y_train = y_train.as_matrix()\n",
+    "\n",
+    "print(type(y_train))"
    ]
   },
   {
@@ -245,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,12 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters (Random)\n",
-    "num_round = 50\n",
+    "num_round = 30\n",
     "param = {\n",
     "    'max_depth': 3,\n",
     "    'eta': 0.05,\n",
@@ -271,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -323,18 +345,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    45710\n",
-       "1     3034\n",
-       "Name: TARGET, dtype: int64"
+       "0.136136    1483\n",
+       "0.134515    1252\n",
+       "0.147259    1196\n",
+       "0.130352     874\n",
+       "0.145638     861\n",
+       "0.131974     845\n",
+       "0.162887     766\n",
+       "0.146857     761\n",
+       "0.137001     741\n",
+       "0.155549     682\n",
+       "0.148124     677\n",
+       "0.142117     645\n",
+       "0.143097     595\n",
+       "0.135380     595\n",
+       "0.141475     578\n",
+       "0.145235     541\n",
+       "0.195533     480\n",
+       "0.140496     480\n",
+       "0.161265     477\n",
+       "0.146503     449\n",
+       "0.131217     426\n",
+       "0.153928     410\n",
+       "0.175558     409\n",
+       "0.132839     367\n",
+       "0.161302     339\n",
+       "0.149151     337\n",
+       "0.152590     330\n",
+       "0.136333     328\n",
+       "0.171565     317\n",
+       "0.142695     315\n",
+       "            ... \n",
+       "0.208335       1\n",
+       "0.196043       1\n",
+       "0.208343       1\n",
+       "0.260451       1\n",
+       "0.392236       1\n",
+       "0.242999       1\n",
+       "0.243007       1\n",
+       "0.291438       1\n",
+       "0.196197       1\n",
+       "0.211818       1\n",
+       "0.231985       1\n",
+       "0.176892       1\n",
+       "0.199061       1\n",
+       "0.200730       1\n",
+       "0.304375       1\n",
+       "0.260070       1\n",
+       "0.291337       1\n",
+       "0.260098       1\n",
+       "0.169478       1\n",
+       "0.216345       1\n",
+       "0.145686       1\n",
+       "0.338926       1\n",
+       "0.183438       1\n",
+       "0.208193       1\n",
+       "0.239445       1\n",
+       "0.192571       1\n",
+       "0.216326       1\n",
+       "0.273132       1\n",
+       "0.196143       1\n",
+       "0.229237       1\n",
+       "Name: TARGET, Length: 3568, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,19 +423,17 @@
    "source": [
     "# Make a submission dataframe\n",
     "submission = test[['SK_ID_CURR']]\n",
-    "submission['TARGET'] = (pred > 0.2) * 1 # Converting booleans to numbers (0/1)\n",
-    "\n",
-    "submission['TARGET'].value_counts()"
+    "submission['TARGET'] = pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the submission file\n",
-    "submission.to_csv(\"submission.csv\", index=False) # Scored 0.565"
+    "submission.to_csv(\"submission.csv\", index=False) # Scored 0.702"
    ]
   }
  ],
